apps/esphome-fleet/overlays/prod/workers.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: esphome-fleet-worker
  namespace: esphome
  labels:
    app.kubernetes.io/instance: esphome-fleet-worker
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: esphome-fleet-worker
spec:
  replicas: 0
  selector:
    matchLabels:
      app.kubernetes.io/instance: esphome-fleet-worker
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: esphome-fleet-worker
  serviceName: esphome-fleet-worker
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: esphome-fleet-worker
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: esphome-fleet-worker
    spec:
      containers:
        - name: esphome-fleet-worker
          image: ghcr.io/weirded/esphome-dist-client:1.7.3@sha256:0883970a3d0e25253470e1b85b7bc6b70525c656c957b70ca92be2f9806420c7
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - mountPath: /esphome-versions
              name: esphome-fleet-worker-data
            - mountPath: /development/components
              name: development
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: false
            runAsGroup: 568
            runAsNonRoot: true
            runAsUser: 568
            seccompProfile:
              type: RuntimeDefault
          resources:
            limits:
              memory: 2Gi
            requests:
              cpu: 200m
              memory: 512Mi
      serviceAccountName: esphome-fleet-worker
      securityContext:
        fsGroup: 568
        fsGroupChangePolicy: OnRootMismatch
        supplementalGroups:
          - 568
      terminationGracePeriodSeconds: 600
      volumes:
        - name: development
          nfs:
            path: /data/dev/esphome/components
            server: infra31
  volumeClaimTemplates:
  - apiVersion: v1
    kind: PersistentVolumeClaim
    metadata:
      name: esphome-fleet-worker-data
      annotations:
        helm.sh/resource-policy: keep
      labels:
        velero.io/exclude-from-backup: "true"
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 16Gi
      storageClassName: ceph-block
