apps/esphome-fleet/overlays/prod/ingress-route.yaml
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: esphome-fleet-ingress
  namespace: esphome
  annotations:
    external-dns.alpha.kubernetes.io/target: infra-int-old
spec:
  entryPoints:
    - websecure
    - websecure-ext
  routes:
    - match: Host(`esphome2.sobrinho.pt`)
      kind: Rule
      services:
        - name: esphome-fleet
          port: main
  tls:
    secretName: esphome-fleet-cert
